# vasp-mace

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_REVIEW.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  NOTICE.md  README.md  pyproject.toml  requirements-heat.txt  setup.py  vasp_mace.py
.github/workflows/: publish.yml
examples/example01_MgO/: CONTCAR  INCAR  OSZICAR  OUTCAR  XDATCAR  vasprun.xml
examples/example02_hBN_D3-dispersion/: CONTCAR  INCAR  OSZICAR  OUTCAR  POSCAR  XDATCAR  vasprun.xml
examples/example03_CsPbI3_MA_MD/: CONTCAR  INCAR  POSCAR  XDATCAR
examples/example03_MgO_MD/: CONTCAR  INCAR  OSZICAR  OUTCAR  POSCAR  XDATCAR
examples/example04_PbTe_pressure/: CONTCAR  INCAR  OSZICAR  OUTCAR  POSCAR  XDATCAR  vasprun.xml
examples/example05_Si_NEB/: INCAR
examples/example05_Si_NEB/00/: CONTCAR  OSZICAR  OUTCAR  POSCAR  vasprun.xml
examples/example05_Si_NEB/01/: CONTCAR  OSZICAR  OUTCAR  POSCAR  vasprun.xml
examples/example05_Si_NEB/02/: CONTCAR  OSZICAR  OUTCAR  POSCAR  vasprun.xml
examples/example05_Si_NEB/03/: CONTCAR  OSZICAR  OUTCAR  POSCAR  vasprun.xml
examples/example05_Si_NEB/04/: CONTCAR  OSZICAR  OUTCAR  POSCAR  vasprun.xml
examples/example05_Si_NEB/05/: CONTCAR  OSZICAR  OUTCAR  POSCAR  vasprun.xml
examples/example06_Pt_NEB/: INCAR
examples/example06_Pt_NEB/00/: CONTCAR  OSZICAR  OUTCAR  POSCAR  vasprun.xml
examples/example06_Pt_NEB/01/: CONTCAR  OSZICAR  OUTCAR  POSCAR  vasprun.xml
examples/example06_Pt_NEB/02/: CONTCAR  OSZICAR  OUTCAR  POSCAR  vasprun.xml
examples/example06_Pt_NEB/03/: CONTCAR  OSZICAR  OUTCAR  POSCAR  vasprun.xml
examples/example06_Pt_NEB/04/: CONTCAR  OSZICAR  OUTCAR  POSCAR  vasprun.xml
examples/example07_PbTe_MD/: INCAR_NPT  INCAR_NVT  POSCAR  run.sh
examples/example07_PbTe_MD/npt_output/: CONTCAR
examples/example08_PbTe_phonons/: CONTCAR  DYNMAT  INCAR  OSZICAR  OUTCAR  XDATCAR
examples/example08_PbTe_phonons/ase_files/: force_constants.npy  phonopy_params.yaml
examples/example09_MgO_elastic/: DYNMAT  INCAR  OSZICAR  OUTCAR  POSCAR  XDATCAR
examples/example09_MgO_elastic/ase_files/: force_constants.npy  phonopy_params.yaml
examples/example10_heat_flux/: INCAR  INCAR_NVT_EQUIL  POSCAR
scripts/: run_tests.py
test/: CONTCAR  INCAR  OSZICAR  OUTCAR  POSCAR  vasprun.xml
tests/: _heat_flux_fixtures.py  test_examples.py  test_heat_flux_cell_check.py  test_mace_heat_flux_smoke.py  test_mace_unfolded_regression.py  test_ml_heat_io.py  test_packaging_metadata.py
vasp_mace/: __init__.py  cli.py  elasticity.py  incar.py  io_outcar.py  io_poscar.py  io_vasp.py  io_xml.py  logging_utils.py  mace_loader.py  md.py  neb.py  phonons.py  relax.py  types_.py
vasp_mace/heat/: __init__.py  heat_flux.py  mace_unfolded.py  ml_heat.py
