[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vasp-mace"
version = "2.1.0"
description = "A VASP-like interface for running ML potential calculations with MACE"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Ricardo Grau-Crespo", email = "rgrauc@gmail.com" }
]
license = { text = "MIT" }
keywords = ["VASP", "MACE", "machine learning potential", "molecular dynamics", "NEB", "materials science"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "ase>=3.22.1",
  "torch>=2.2",
  "mace-torch>=0.3.6",
]

[project.urls]
Homepage = "https://github.com/rgraucrespo/vasp-mace"
Repository = "https://github.com/rgraucrespo/vasp-mace"
"Bug Tracker" = "https://github.com/rgraucrespo/vasp-mace/issues"

[project.scripts]
vasp-mace = "vasp_mace.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vasp_mace*"]

[tool.setuptools]
include-package-data = true

[project.optional-dependencies]
phonons = [
  "phonopy>=2.20",
]
dev = [
  "pytest",
  "black",
  "ruff",
  "mypy",
]
