[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vasp-mace"
version = "2.3.1"
description = "A VASP-like interface for running ML potential calculations with MACE"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Ricardo Grau-Crespo", email = "rgrauc@gmail.com" }
]
license = { file = "LICENSE" }
keywords = ["VASP", "MACE", "machine learning potential", "molecular dynamics", "NEB", "materials science"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "ase>=3.22.1",
  "torch>=2.2",
  "mace-torch>=0.3.15",
]

[project.urls]
Homepage = "https://github.com/rgraucrespo/vasp-mace"
Repository = "https://github.com/rgraucrespo/vasp-mace"
"Bug Tracker" = "https://github.com/rgraucrespo/vasp-mace/issues"

[project.scripts]
vasp-mace = "vasp_mace.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vasp_mace*"]

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[project.optional-dependencies]
phonons = [
  "phonopy>=2.20",
]
heat = [
  # MACE unfolded-cell heat-flux backend used when ML_LHEAT = .TRUE.
  # mace_unfolded is GitHub-only (not on PyPI); `comms` is a logging-only
  # runtime dependency of mace_unfolded that is also GitHub-only. PyPI does
  # not accept direct-URL refs in uploaded metadata, so when cutting the
  # next release these direct URLs need to be stripped (or vendored) before
  # `python -m build` + upload.
  "mace_unfolded @ git+https://github.com/pulgon-project/mace-unfolded.git",
  "comms @ git+https://github.com/sirmarcel/comms.git",
]
dev = [
  "pytest",
  "black",
  "ruff",
  "mypy",
]
